
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


typedef int pg_wchar ;
struct TYPE_5__ {int* pgwstr; TYPE_1__* state; scalar_t__* wstr; scalar_t__ usewide; scalar_t__ str; } ;
struct TYPE_4__ {int poschar; scalar_t__ posbyte; } ;
typedef TYPE_2__ TParser ;


 scalar_t__ GetDatabaseEncoding () ;
 scalar_t__ PG_UTF8 ;
 int lengthof (int const*) ;
 scalar_t__ pg_dsplen (scalar_t__) ;

__attribute__((used)) static int
p_isspecial(TParser *prs)
{



 if (pg_dsplen(prs->str + prs->state->posbyte) == 0)
  return 1;







 if (GetDatabaseEncoding() == PG_UTF8 && prs->usewide)
 {
  static const pg_wchar strange_letter[] = {



   0x0903,
   0x093E,
   0x093F,
   0x0940,
   0x0949,
   0x094A,
   0x094B,
   0x094C,
   0x0982,
   0x0983,
   0x09BE,
   0x09BF,
   0x09C0,
   0x09C7,
   0x09C8,
   0x09CB,
   0x09CC,
   0x09D7,
   0x0A03,
   0x0A3E,
   0x0A3F,
   0x0A40,
   0x0A83,
   0x0ABE,
   0x0ABF,
   0x0AC0,
   0x0AC9,
   0x0ACB,
   0x0ACC,
   0x0B02,
   0x0B03,
   0x0B3E,
   0x0B40,
   0x0B47,
   0x0B48,
   0x0B4B,
   0x0B4C,
   0x0B57,
   0x0BBE,
   0x0BBF,
   0x0BC1,
   0x0BC2,
   0x0BC6,
   0x0BC7,
   0x0BC8,
   0x0BCA,
   0x0BCB,
   0x0BCC,
   0x0BD7,
   0x0C01,
   0x0C02,
   0x0C03,
   0x0C41,
   0x0C42,
   0x0C43,
   0x0C44,
   0x0C82,
   0x0C83,
   0x0CBE,
   0x0CC0,
   0x0CC1,
   0x0CC2,
   0x0CC3,
   0x0CC4,
   0x0CC7,
   0x0CC8,
   0x0CCA,
   0x0CCB,
   0x0CD5,
   0x0CD6,
   0x0D02,
   0x0D03,
   0x0D3E,
   0x0D3F,
   0x0D40,
   0x0D46,
   0x0D47,
   0x0D48,
   0x0D4A,
   0x0D4B,
   0x0D4C,
   0x0D57,
   0x0D82,
   0x0D83,
   0x0DCF,
   0x0DD0,
   0x0DD1,
   0x0DD8,
   0x0DD9,
   0x0DDA,
   0x0DDB,
   0x0DDC,
   0x0DDD,

   0x0DDE,
   0x0DDF,
   0x0DF2,
   0x0DF3,
   0x0F3E,
   0x0F3F,
   0x0F7F,
   0x102B,
   0x102C,
   0x1031,
   0x1038,
   0x103B,
   0x103C,
   0x1056,
   0x1057,
   0x1062,
   0x1063,
   0x1064,
   0x1067,
   0x1068,
   0x1069,
   0x106A,
   0x106B,
   0x106C,
   0x106D,
   0x1083,
   0x1084,
   0x1087,
   0x1088,
   0x1089,
   0x108A,
   0x108B,
   0x108C,
   0x108F,
   0x17B6,
   0x17BE,
   0x17BF,
   0x17C0,
   0x17C1,
   0x17C2,
   0x17C3,
   0x17C4,
   0x17C5,
   0x17C7,
   0x17C8,
   0x1923,
   0x1924,
   0x1925,
   0x1926,
   0x1929,
   0x192A,
   0x192B,
   0x1930,
   0x1931,
   0x1933,
   0x1934,
   0x1935,
   0x1936,
   0x1937,
   0x1938,
   0x19B0,
   0x19B1,
   0x19B2,
   0x19B3,
   0x19B4,
   0x19B5,
   0x19B6,
   0x19B7,
   0x19B8,
   0x19B9,
   0x19BA,
   0x19BB,
   0x19BC,
   0x19BD,
   0x19BE,
   0x19BF,
   0x19C0,
   0x19C8,
   0x19C9,
   0x1A19,
   0x1A1A,
   0x1A1B,
   0x1B04,
   0x1B35,
   0x1B3B,
   0x1B3D,
   0x1B3E,
   0x1B3F,
   0x1B40,
   0x1B41,
   0x1B43,
   0x1B44,
   0x1B82,
   0x1BA1,
   0x1BA6,
   0x1BA7,
   0x1BAA,
   0x1C24,
   0x1C25,
   0x1C26,
   0x1C27,
   0x1C28,
   0x1C29,
   0x1C2A,
   0x1C2B,
   0x1C34,
   0x1C35,
   0xA823,
   0xA824,
   0xA827,
   0xA880,
   0xA881,
   0xA8B4,
   0xA8B5,
   0xA8B6,
   0xA8B7,
   0xA8B8,
   0xA8B9,
   0xA8BA,
   0xA8BB,
   0xA8BC,
   0xA8BD,
   0xA8BE,
   0xA8BF,
   0xA8C0,
   0xA8C1,
   0xA8C2,
   0xA8C3,
   0xA952,
   0xA953,
   0xAA2F,
   0xAA30,
   0xAA33,
   0xAA34,
   0xAA4D
  };
  const pg_wchar *StopLow = strange_letter,
       *StopHigh = strange_letter + lengthof(strange_letter),
       *StopMiddle;
  pg_wchar c;

  if (prs->pgwstr)
   c = *(prs->pgwstr + prs->state->poschar);
  else
   c = (pg_wchar) *(prs->wstr + prs->state->poschar);

  while (StopLow < StopHigh)
  {
   StopMiddle = StopLow + ((StopHigh - StopLow) >> 1);
   if (*StopMiddle == c)
    return 1;
   else if (*StopMiddle < c)
    StopLow = StopMiddle + 1;
   else
    StopHigh = StopMiddle;
  }
 }

 return 0;
}
